# AtlasSphere

./: README.md  pyproject.toml
AtlasSphere/: Dockerfile  README.md
AtlasSphere/agents/: base_agent.py  evolve_agent.py
AtlasSphere/core/: __init__.py  control_plane.py  data_plane.py  sandbox_eval.py
AtlasSphere/gateway/: server.py
AtlasSphere/plugins/dynamic/: __init__.py  toolkit_generator.py
AtlasSphere/plugins/single_cell/: toolkit.py
AtlasSphere/src/atlassphere/core/: data_plane.py
AtlasSphere/src/atlassphere/gateway/: server.py
AtlasSphere/src/atlassphere/mcp_server/: server.py
AtlasSphere/src/atlassphere/plugins/single_cell/: toolkit.py
